--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "drizzle-orm": "^0.44.4",
         "hono": "^4.9.1",
+        "http-status-codes": "^2.3.0",
         "pino": "^9.9.0",
         "postgres": "^3.4.7",
         "zod": "^4.0.17"
